--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "serve": "vite preview"
+    "build:docs": "vite build --config vite.docs.config.js",
+    "serve": "vite preview",
+    "serve:docs": "vite preview --config vite.docs.config.js"
   },
   "dependencies": {
     "vite": "^4.1.1"
