Moved text-interface into its own library; no longer does the library travel with the starter

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "serve:docs": "vite preview --config vite.docs.config.js"
   },
   "dependencies": {
+    "text-interface": "^1.0.5",
     "vite": "^4.1.1"
   }
 }
